<resources>
    <string name="app_name">ConstellatioRe</string>
    <string name="label_star">星座</string>
    <string name="label_parnter">配对</string>
    <string name="label_luck">运势</string>
    <string name="label_me">我的</string>

    <string name="man">男生</string>
    <string name="woman">女生</string>
    <string name="parnter_info">分别先选择您的星座和对方的星座，点击配对分析即可。</string>
    <string name="parnter_btn_prize">每日抽奖</string>
    <string name="parnter_btn_analysis">开始配对分析</string>
    <string name="about">关于应用</string>
    <string name="gnjs">功能介绍</string>
    <string name="update_log">更新日志</string>
    <string name="feedback">反馈问题</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>